[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chainreaction"]

[project]
name = "chainreaction"
version = "1.0"
authors = [{name="Justin Andreas Bich"}]
description = "Chain Reaction is a combinatorial game in which 'orbs' are placed in cells with the goal of capturing all the orbs on the board."
readme = "README.md"
requires-python = ">=3.8.10"
dependencies = ["pygame", "numpy", "tk", "matplotlib"]
license = "MIT"
license-files = ["LICENSE.txt"]

[project.scripts]
chainreaction-client = "chainreaction.client:main"
chainreaction-server = "chainreaction.server:main"
